--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ body {
     object-fit: cover;
 }
 
-.slick-dots {
+/* .slick-dots {
     display: flex;
     justify-content: center;
     margin: 0;
@@ -134,4 +134,20 @@ body {
 .slick-dots li.slick-active button {
     background-color: #BC2C25;
     opacity: 100%;
+} */
+
+.carousel-indicators {
+    position: relative;
+    bottom: 0;
+    margin-top: 20px;
+}
+
+.carousel-indicators li {
+    width: 1rem;
+    height: 1rem;
+    padding: 0;
+    border: 1px solid #707070;
+    border-radius: 100%;
+    background-color: #BC2C25;
+    opacity: 50%;
 }
